mobile responsive + balance overlap issue fixed

--- a/src/Components/BridgeText/BridgeText.module.scss
+++ b/src/Components/BridgeText/BridgeText.module.scss
@@ -8,6 +8,7 @@
   color: var(--theme-bridge-header-text);
   @media screen and (min-width: 320px) and (max-width: 767px) {
     padding-top: 20px;
+    font-size: 24px;
   }
   @media screen and (min-width: 768px) and (max-width: 992px) {
     padding-top: 40px;
@@ -20,6 +21,11 @@
   line-height: 38px;
   letter-spacing: 0px;
   color: var(--theme-bridge-desc-text);
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    font-size: 18px;
+    line-height: 26px;
+    margin-top: 0px !important;
+  }
 }
 
 .question {
@@ -29,6 +35,11 @@
   line-height: 52px;
   letter-spacing: 0px;
   margin-top: 20px;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    margin-top: 10px;
+    margin-bottom: 0px;
+    line-height: 28px;
+  }
 }
 .answer {
   font-size: 16px;
@@ -37,6 +48,11 @@
   line-height: 32px;
   letter-spacing: 0px;
   color: var(--theme-bridge-desc-text);
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 8px;
+  }
 }
 .discriptionInfo {
   color: var(--theme-governance-buttonBorder);
