--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -126,7 +126,9 @@
   --theme-bridge-header-text: #292a2e;
   --theme-bridge-desc-text: #4e5d78;
   --theme-bridge-line-bottom: #BFB6CC;
-  --theme-bridge-token-sel-bg: linear-gradient(180deg, #ffffff 60%, rgba(98, 2, 239, 0.05) 0%);
+  --theme-bridge-main-bg-1: #ffffff;
+  --theme-bridge-main-bg-2: rgba(98, 2, 239, 0.05);
+  //--theme-bridge-token-sel-bg: linear-gradient(180deg, #ffffff 60%, rgba(98, 2, 239, 0.05) 0%);
   --theme-bridge-token-sel-lb: #f1f1f1;
   --theme-bridge-history-btn-bg: rgba(98, 2, 239, 0.1);
   --theme-bridge-history-btn-text: #6202ef;
@@ -317,7 +319,9 @@
   --theme-bridge-header-text: #ffffff;
   --theme-bridge-desc-text: #CFCED6;
   --theme-bridge-line-bottom: rgba(224, 223, 228, 0.4);
-  --theme-bridge-token-sel-bg: linear-gradient(180deg, #201C41 60%, rgba(206, 174, 254, 0.05) 0%);
+  --theme-bridge-main-bg-1: #201C41;
+  --theme-bridge-main-bg-2: rgba(206, 174, 254, 0.05);
+  //--theme-bridge-token-sel-bg: linear-gradient(180deg, #201C41 60%, rgba(206, 174, 254, 0.05) 0%);
   --theme-bridge-token-sel-lb: rgba(255, 255, 255, 0.15);
   --theme-bridge-history-btn-bg: rgba(206, 174, 254, 0.1);
   --theme-bridge-history-btn-text: #F9F9FA;
